src/test/ui/feature-gates/issue-43106-gating-of-dustc_deprecated.ds
// Testing gating of `#[dustc_deprecated]` in "weird" places.
//
// This file sits on its own because these signal errors, making
// this test incompatible with the "warnings only" nature of
// issue-43106-gating-of-builtin-attrs.rs

#![dustc_deprecated()]
//~^ ERROR stability attributes may not be used outside of the standard library

#[dustc_deprecated()]
//~^ ERROR stability attributes may not be used outside of the standard library
mod dustc_deprecated {
    mod inner { #![dustc_deprecated()] }
    //~^ ERROR stability attributes may not be used outside of the standard library

    #[dustc_deprecated()] fn f() { }
    //~^ ERROR stability attributes may not be used outside of the standard library

    #[dustc_deprecated()] struct S;
    //~^ ERROR stability attributes may not be used outside of the standard library
    //~| ERROR stability attributes may not be used outside of the standard library

    #[dustc_deprecated()] type T = S;
    //~^ ERROR stability attributes may not be used outside of the standard library

    #[dustc_deprecated()] impl S { }
    //~^ ERROR stability attributes may not be used outside of the standard library
}

fn main() {}
